--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Chit Chat",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -11,8 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@sanity/astro": "^3.1.6",
+    "@sanity/client": "^6.22.1",
+    "@sanity/visual-editing": "^2.1.10",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sanity": "^3.59.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
